适配openEuler 20.03LTS，cephfs monitor改为列表，增加HwHiAiUser

--- a/all.yaml
+++ b/all.yaml
@@ -14,6 +14,7 @@
           - ubuntu_18.04_aarch64
           - ubuntu_18.04_x86_64
           - centos_7_aarch64
+          - openEuler_20.03_x86_64
 
 # copy nfs resources to nfs_server host
 - hosts:
@@ -26,6 +27,7 @@
           - ubuntu_18.04_aarch64
           - ubuntu_18.04_x86_64
           - centos_7_aarch64
+          - openEuler_20.03_x86_64
 
 # copy harbor install package to harbor host
 - hosts: harbor
