--- a/playbooks/roles/mindx.basic/tasks/worker.yml
+++ b/playbooks/roles/mindx.basic/tasks/worker.yml
@@ -1,3 +1,42 @@
+- name: include vars
+  include_vars: ../defaults/main.yml
+
+- name: create group {{ HIAI_GROUP }}
+  ansible.builtin.group:
+    name: "{{ HIAI_GROUP }}"
+    state: present
+    gid: "{{ HIAI_GROUP_ID }}"
+  ignore_errors: true
+
+- name: create group {{ DL_GRP }}
+  ansible.builtin.group:
+    name: "{{ DL_GRP }}"
+    state: present
+    gid: "{{ DL_GID }}"
+  ignore_errors: true
+
+- name: create user {{ HIAI_USER }}
+  ansible.builtin.user:
+    name: "{{ HIAI_USER }}"
+    comment: "{{  HIAI_USER }}"
+    uid: "{{ HIAI_USER_ID }}"
+    group: "{{ HIAI_GROUP }}"
+    state: present
+    shell: /bin/bash
+  ignore_errors: true
+
+- name: create user {{ DL_USR }}
+  ansible.builtin.user:
+    name: "{{ DL_USR }}"
+    comment: "{{  DL_USR }}"
+    uid: "{{ DL_UID }}"
+    group: "{{ DL_GRP }}"
+    groups: "{{ HIAI_GROUP }}"
+    append: yes
+    state: present
+    shell: /usr/sbin/nologin
+  ignore_errors: true
+
 - name: create log directories for "{{DL_USR}}"
   file:
     path: "{{ item }}"
