--- a/playbooks/roles/mindx.k8s.install/tasks/common.yml
+++ b/playbooks/roles/mindx.k8s.install/tasks/common.yml
@@ -72,6 +72,4 @@
     name: firewalld
     enabled: no
     state: stopped
-  when:
-    - OS_ID == 'centos'
-    - OS_VERSION_ID == '7'
+  when: OS_ID != 'ubuntu'
