--- a/playbooks/roles/mindx.basic/tasks/common.yml
+++ b/playbooks/roles/mindx.basic/tasks/common.yml
@@ -1,31 +1,6 @@
 - name: include vars
   include_vars: ../defaults/main.yml
 
-- name: create group {{ DL_GRP }}
-  ansible.builtin.group:
-    name: "{{ DL_GRP }}"
-    state: present
-    gid: "{{ DL_GID }}"
-  ignore_errors: true
-
-- name: create group {{ HIAI_GROUP }}
-  ansible.builtin.group:
-    name: "{{ HIAI_GROUP }}"
-    state: present
-  ignore_errors: true
-
-- name: create user {{ DL_USR }}
-  ansible.builtin.user:
-    name: "{{ DL_USR }}"
-    comment: "{{  DL_USR }}"
-    uid: "{{ DL_UID }}"
-    group: "{{ DL_GRP }}"
-    groups: "{{ MINDX_GROUP }}"
-    append: yes
-    state: present
-    shell: /usr/sbin/nologin
-  ignore_errors: true
-
 - name: create log directories
   file:
     path: /var/log/mindx-dl
@@ -43,11 +18,9 @@
     - OS_ID == 'ubuntu'
     - OS_VERSION_ID == '18.04'
 
-- name: install haveged for centos
+- name: install haveged for centos or openEuler
   shell: rpm -ivh --force --nodeps --replacepkgs {{ haveged_dir }}/*.rpm
-  when:
-    - OS_ID == 'centos'
-    - OS_VERSION_ID == '7'
+  when: OS_ID != 'ubuntu'
 
 - name: enable haveged
   systemd:
