--- a/playbooks/roles/mindx.k8s.cephfspv/tasks/main.yml
+++ b/playbooks/roles/mindx.k8s.cephfspv/tasks/main.yml
@@ -1,8 +1,8 @@
 - name: check CEPHFS
   debug:
-    msg:  CEPHFS_IP and CEPHFS_PORT and CEPHFS_USER and CEPHFS_KEY can not be empty in group_vars/all.yaml if "STORAGE_TYPE" is "CEPHFS", please check"
+    msg:  CEPHFS_MONITOR and CEPHFS_USER and CEPHFS_KEY can not be empty in group_vars/all.yaml if "STORAGE_TYPE" is "CEPHFS", please check"
   failed_when: true
-  when: CEPHFS_IP | length == 0 or CEPHFS_PORT | length == 0 or CEPHFS_USER | length == 0 or CEPHFS_KEY | length == 0
+  when: CEPHFS_MONITOR | length == 0 or CEPHFS_USER | length == 0 or CEPHFS_KEY | length == 0
 
 - name: create yaml directory
   file:
