--- a/playbooks/roles/mindx.nfs.client/tasks/main.yml
+++ b/playbooks/roles/mindx.nfs.client/tasks/main.yml
@@ -12,10 +12,8 @@
   environment:
     DEBIAN_FRONTEND: noninteractive
     DEBIAN_PRIORITY: critical
-  when:
-    - OS_ID == 'ubuntu'
-    - OS_VERSION_ID == '18.04'
+  when: OS_ID == 'ubuntu'
 
-- name: install nfs client for centos or openEuler
+- name: install nfs client for not ubuntu
   shell: rpm -ivh --force --nodeps --replacepkgs {{ client_pkg }}/*.rpm
   when: OS_ID != 'ubuntu'
