--- a/playbooks/roles/mindx.nfs.server/tasks/main.yml
+++ b/playbooks/roles/mindx.nfs.server/tasks/main.yml
@@ -9,11 +9,9 @@
   environment:
     DEBIAN_FRONTEND: noninteractive
     DEBIAN_PRIORITY: critical
-  when:
-    - OS_ID == 'ubuntu'
-    - OS_VERSION_ID == '18.04'
+  when: OS_ID == 'ubuntu'
 
-- name: install nfs server for centos or openEuler
+- name: install nfs server for not ubuntu
   shell: |
       rpm -ivh --force --nodeps --replacepkgs {{ client_pkg }}/*.rpm
       rpm -ivh --force --nodeps --replacepkgs {{ server_pkg }}/*.rpm
