--- a/playbooks/roles/mindx.basic/tasks/common.yml
+++ b/playbooks/roles/mindx.basic/tasks/common.yml
@@ -14,11 +14,9 @@
   environment:
     DEBIAN_FRONTEND: noninteractive
     DEBIAN_PRIORITY: critical
-  when:
-    - OS_ID == 'ubuntu'
-    - OS_VERSION_ID == '18.04'
+  when: OS_ID == 'ubuntu'
 
-- name: install haveged for centos or openEuler
+- name: install haveged for not ubuntu
   shell: rpm -ivh --force --nodeps --replacepkgs {{ haveged_dir }}/*.rpm
   when: OS_ID != 'ubuntu'
 
