--- a/playbooks/roles/mindx.nfs.server/files/rule.yaml
+++ b/playbooks/roles/mindx.nfs.server/files/rule.yaml
@@ -3,79 +3,79 @@ groups:
   rules:
   - alert: Disk
     expr: (node_filesystem_size_bytes{mountpoint="/"} - node_filesystem_free_bytes{mountpoint="/"})/node_filesystem_size_bytes{mountpoint="/"}*100>70
-    for: 3m
+    for: 1m
     labels:
       severity: Major
-      source: ""
-  - alert: Npu
-    expr: npu_chip_info_health_status == 0
-    for: 3m
-    labels:
-      severity: Urgent
-      source: '{{$labels.job}}:{{$labels.id}}'
-  - alert: cluster-manager-status
-    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"cluster-manager-.*"})==1
-    for: 3m
-    labels:
-      severity: Major
-      source: ""
-  - alert: train-manager-status
-    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"train-manager-.*"})==1
-    for: 3m
-    labels:
-      severity: Major
-      source: ""
-  - alert: inference-manager-status
-    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"inference-manager-.*"})==1
-    for: 3m
-    labels:
-      severity: Major
-      source: ""
-  - alert: image-manager-status
-    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"image-manager-.*"})==1
-    for: 3m
-    labels:
-      severity: Major
-      source: ""
-  - alert: data-manager-status
-    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"data-manager-.*"})==1
-    for: 3m
-    labels:
-      severity: Major
-      source: ""
-  - alert: dataset-manager-status
-    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"dataset-manager-.*"})==1
-    for: 3m
-    labels:
-      severity: Major
-      source: ""
-  - alert: user-manager-status
-    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"user-manager-.*"})==1
-    for: 3m
-    labels:
-      severity: Major
-      source: ""
-  - alert: model-manager-status
-    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"model-manager-.*"})==1
-    for: 3m
-    labels:
-      severity: Major
-      source: ""
-  - alert: apigw-status
-    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"apigw-.*"})==1
-    for: 3m
-    labels:
-      severity: Major
-      source: ""
+      source: "Node"
   - alert: Memory
     expr: (node_memory_MemTotal_bytes - node_memory_MemAvailable_bytes) / node_memory_MemTotal_bytes*100>90
     for: 1m
     labels:
       severity: Prompt
-      source: ""
-  - alert: Cpu
+      source: "Node"
+  - alert: CPU
     expr: 100 * (1 - avg(irate(node_cpu_seconds_total{mode="idle"}[2m])) by(instance))>90
-    for: 5m
+    for: 1m
     labels:
       severity: Major
-      source: ""
+      source: "Node"
+  - alert: NPU
+    expr: npu_chip_info_health_status == 0
+    for: 1m
+    labels:
+      severity: Urgent
+      source: 'NPU'
+  - alert: cluster-manager-status
+    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"cluster-manager-.*"})==1
+    for: 1m
+    labels:
+      severity: Major
+      source: "Component"
+  - alert: train-manager-status
+    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"train-manager-.*"})==1
+    for: 1m
+    labels:
+      severity: Major
+      source: "Component"
+  - alert: inference-manager-status
+    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"inference-manager-.*"})==1
+    for: 1m
+    labels:
+      severity: Major
+      source: "Component"
+  - alert: image-manager-status
+    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"image-manager-.*"})==1
+    for: 1m
+    labels:
+      severity: Major
+      source: "Component"
+  - alert: data-manager-status
+    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"data-manager-.*"})==1
+    for: 1m
+    labels:
+      severity: Major
+      source: "Component"
+  - alert: dataset-manager-status
+    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"dataset-manager-.*"})==1
+    for: 1m
+    labels:
+      severity: Major
+      source: "Component"
+  - alert: user-manager-status
+    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"user-manager-.*"})==1
+    for: 1m
+    labels:
+      severity: Major
+      source: "Component"
+  - alert: model-manager-status
+    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"model-manager-.*"})==1
+    for: 1m
+    labels:
+      severity: Major
+      source: "Component"
+  - alert: apigw-status
+    expr: sum by(pod,phase) (kube_pod_status_phase{phase!~"Running",pod=~"apigw-.*"})==1
+    for: 1m
+    labels:
+      severity: Major
+      source: "Component"
