mysql新增apigw_user,image_configs表增加image_usage字段,支持LOADBALANCER

--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -11,6 +11,13 @@ MYSQL_PASSWORD: ""
 # password for redis, can not be empty, delete immediately after finished
 REDIS_PASSWORD: ""
 
+# apigw/apigw-business loadBalancerIP
+APIGW_LOADBALANCER_IP: ""
+# apigw loadBalancerIP port
+APIGW_LOADBALANCER_PORT: "443"
+# apigw-business loadBalancerIP port
+APIGW_BUSINESS_LOADBALANCER_PORT: "444"
+
 # select "NFS" or "CEPHFS" or "OCEANSTORE" as the storage solution, default to "NFS"
 STORAGE_TYPE: "NFS"
 # mindx-dl platform storage path on "NFS" or "CEPHFS" or "OCEANSTORE", default to /data/atlas_dls
