--- a/playbooks/roles/mindx.harbor.push/defaults/main.yml
+++ b/playbooks/roles/mindx.harbor.push/defaults/main.yml
@@ -5,3 +5,5 @@ k8s_namespace: "{{K8S_NAMESPACE}}"
 prefabricated: "{{ 1 if images_dir == 'mindx-inner-images' else 2 }}"
 harbor_path: "{{ manifest_name if images_dir == 'mindx-inner-images' else orig_name.split(':')[0] }}"
 image_arch: "{{ 'noarch' if images_dir == 'mindx-inner-images' else arch }}"
+image_prefix: "{{ image.split('/')[-1].split('_')[0] if images_dir == 'mindx-pre-images' else '' }}"
+image_usage: "{{ image_prefix if (images_dir == 'mindx-pre-images' and image_prefix in ('inference', 'common')) else '' }}"
